Add content and images for page shop-col

--- a/app/blocks/_sidebar-nav.html
+++ b/app/blocks/_sidebar-nav.html
@@ -6,7 +6,7 @@
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a class="sidebar-nav__link @@sidebar-nav__link" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown sidebar-nav__dropdown--img">
 											<div class="sidebar-nav__dropdown-img">
-												<img src="img/sidebar-nav/nav-bg.jpg" alt="">
+												<img src="img/sidebar-nav/03.jpg" alt="">
 											</div>
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
