--- a/app/blocks/_sidebar-new.html
+++ b/app/blocks/_sidebar-new.html
@@ -3,38 +3,38 @@
 								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
-											<img src="img/cart/02.jpg" alt="">
+											<img src="img/sidebar-new/01.jpg" alt="">
 										</div>
-										<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C <span>$15.00</span></div>
+										<div class="sidebar-new__item-title">BLACK+DECKER 5-Cup Coffeemaker<span>$24.99</span></div>
 									</div>
 								</a>
 								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
-											<img src="img/cart/03.jpg" alt="">
+											<img src="img/sidebar-new/02.jpg" alt="">
 										</div>
 										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-										</div>
-									</div>
-								</a>
-								<a class="sidebar-new__link" href="detail.html"> 
-									<div class="sidebar-new__item">
-										<div class="sidebar-new__item-img">
-											<img src="img/cart/01.jpg" alt="">
-										</div>
-										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
+											<div class="sidebar-new__item-title">Single Serve K Cup Coffee Maker<span>$59.99</span></div>
 										</div>
 									</div>
 								</a>
 								<a class="sidebar-new__link" href="detail.html"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
-											<img src="img/cart/07.jpg" alt="">
+											<img src="img/sidebar-new/03.jpg" alt="">
 										</div>
 										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
+											<div class="sidebar-new__item-title">Keurig K250 Coffee Maker<span>$229.95</span></div>
+										</div>
+									</div>
+								</a>
+								<a class="sidebar-new__link" href="detail.html"> 
+									<div class="sidebar-new__item">
+										<div class="sidebar-new__item-img">
+											<img src="img/sidebar-new/04.jpg" alt="">
+										</div>
+										<div class="sidebar-new__item-body">
+											<div class="sidebar-new__item-title">Single Serve Coffee Maker<span>$59.99</span></div>
 										</div>
 									</div>
 								</a>
