--- a/app/blocks/_sidebar-news.html
+++ b/app/blocks/_sidebar-news.html
@@ -4,12 +4,12 @@
 									<div class="sidebar-news__item">
 										<div class="sidebar-news__item-img">
 											<a href="blog-single.html">
-												<img src="img/news/03.jpg" alt="">
+												<img src="img/blog/01.jpg" alt="">
 											</a>
 										</div>
 										<div class="sidebar-news__item-body">
-											<a class="sidebar-news__item-title" href="blog-single.html">2016 Summer Women Chiffon Short | <span>By KOMODOART</span></a>
-											<div class="sidebar-news__item-descr">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</div>
+											<a class="sidebar-news__item-title" href="blog-single.html">How To Make a Latte at Home Without an Espresso Machine | <span>By KOMODOART</span></a>
+											<div class="sidebar-news__item-descr">We love our iced coffee in the summer, but fall and winter belong to the latte. We love to sit inside on a chilly day with a hot, frothy latte or cappuccino. But a latte shouldn’t just be a coffee shop treat.</div>
 											<a class="sidebar-news__item-btn btn" href="blog-single.html">Read more</a>
 										</div>
 									</div>
