--- a/app/index.html
+++ b/app/index.html
@@ -161,12 +161,14 @@
 							<div class="special-product__text">
 								<div class="special-product__text-title">Keurig® K15 Classic Series</div>
 								<div class="special-product__text-descr">
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+									<p>When space and portability are important, choose the Keurig® K15 coffee maker from the Classic series, the most compact coffee maker. It brews three cup sizes in under two minutes.</p>
 									<span>Key features</span>
 									<ul>
-										<li>No Water Reservoir</li>
-										<li>Button Controls</li>
-										<li>Brews 6, 8, 10oz. with K-Cup® pods</li>
+										<li>Brews coffee, tea, hot cocoa, specialty, and iced beverages</li>
+										<li>Brews in under two minutes</li>
+										<li>K-Cup® pod Brew Sizes: 6, 8, 10 oz.</li>
+										<li>Compact size</li>
+										<li>Compatible with My K-Cup® Reusable Coffee Filter</li>
 									</ul>
 								</div>
 								<div class="special-product__text-price">
