--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -13,32 +13,16 @@
 				<div class="main-slider">
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<img src="img/main-slider/01.jpg" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
+							<a href="detail.html">
+								<img src="img/main-slider/01.jpg" alt="#">
+							</a>
 						</div>
 					</div>
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<img src="img/main-slider/03.png" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
-						</div>
-					</div>
-					<div class="main-slider__item">
-						<div class="main-slider__image">
-							<img src="img/01.jpg" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
+							<a href="detail.html">
+								<img src="img/main-slider/02.jpg" alt="#">
+							</a>
 						</div>
 					</div>
 				</div>
@@ -48,29 +32,29 @@
 					<div class="information__row">
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/09.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/10.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/02.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/07.jpg" alt="">
 								</a>
 							</div>
 						</div>
@@ -110,7 +94,7 @@
 							@@include('blocks/_sidebar-block.html',{
 								"sidebar-block__class":"shop-col__sidebar-block",
 								"sidebar-block__link":"#",
-								"sidebar-block__img":"img/newsletter/bg.jpg"
+								"sidebar-block__img":"img/information/03.jpg"
 							})
 							<!-- sidebar-block end -->
 
@@ -195,14 +179,14 @@
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
 												<a href="detail.html">
-													<img src="img/cart/02.jpg" alt="">
+													<img src="img/perfect-product/01.jpg" alt="">
 												</a>
 											</div>
 											<div class="perfect-product__item-body">
-												<a class="perfect-product__item-title" href="#">Keurig® Commercial Brewing System</a>
+												<a class="perfect-product__item-title" href="#">Keurig K-Cafe Coffee Maker</a>
 												<div class="perfect-product__item-descr">
-													<span>Brews 12, 14, 16. or 18* oz.</span>
-													Need a Keurig for the workplace? We have you covered. Our commercial brewers can easily handle the variety and demands of businesses of any size.
+													<span>Brews 6, 8, 10 and 12 oz.</span>
+													Enjoy the rich, full-flavored coffee you love or delicious coffeehouse beverages from the new Keurig K-Café Special Edition single serve coffee, latte, and cappuccino maker.
 												</div>
 
 												<div id="countdown" class="perfect-product__countdown countdown">
@@ -232,14 +216,14 @@
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
 												<a href="detail.html">
-													<img src="img/cart/08.jpg" alt="">
+													<img src="img/perfect-product/02.jpg" alt="">
 												</a>
 											</div>
 											<div class="perfect-product__item-body">
-												<a class="perfect-product__item-title" href="#">Keurig® Commercial Brewing System</a>
+												<a class="perfect-product__item-title" href="#">Ninja CE251 Programmable Brewer</a>
 												<div class="perfect-product__item-descr">
-													<span>Brews 12, 14, 16. or 18* oz.</span>
-													Need a Keurig for the workplace? We have you covered. Our commercial brewers can easily handle the variety and demands of businesses of any size.
+													<span>Brews 6, 8, 10, and 12 oz.</span>
+													Ninja Coffee Brewer is a 12-cup programmable coffee maker with custom brew strengths and hotter brewing advanced boiler to ensure your coffee is hot, flavorful, and never bitter.
 												</div>
 
 												<div id="countdown_1" class="perfect-product__countdown countdown">
@@ -784,15 +768,15 @@
 								<div class="information-product__row">
 									<div class="information-product__column">
 										<div class="information-product__item">
-											<a href="#">
-												<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">
+											<a href="detail.html">
+												<img class="information-product__img" src="img/information/15.jpg" alt="">
 											</a>
 										</div>
 									</div>
 									<div class="information-product__column">
 										<div class="information-product__item">
-											<a href="#">
-												<img class="information-product__img" src="img/all-categories/05-1.jpg" alt="">								
+											<a href="detail.html">
+												<img class="information-product__img" src="img/information/13.jpg" alt="">								
 											</a>
 										</div>
 									</div>
@@ -1101,8 +1085,8 @@
 								<img src="img/icons/checked_truck.png" alt="">
 							</div>
 							<div class="policy__item-body">
-								<div class="policy__item-title policy__item-title--white">Freeshipping on order over $100 </div>
-								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+								<div class="policy__item-title policy__item-title--white">Products that ship to you</div>
+								<div class="policy__item-descr">Find top products that ship to you.</div>
 								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
@@ -1114,7 +1098,7 @@
 							</div>
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">10% off the bill</div>
-								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+								<div class="policy__item-descr">Low prices and amazing deals every day.</div>
 								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
@@ -1126,7 +1110,7 @@
 							</div>
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">Security payment</div>
-								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+								<div class="policy__item-descr">We protect your personal payment information.</div>
 								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
@@ -1138,7 +1122,7 @@
 							</div>
 							<div class="policy__item-body">
 								<div class="policy__item-title policy__item-title--white">live Support</div>
-								<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+								<div class="policy__item-descr">24/7 customer service. You can email, chat, or call us any time.</div>
 								<a class="policy__item-btn btn policy__item-btn--white" href="#">READ MORE</a>
 							</div>
 						</div>
