Add content for page all-categories

--- a/app/detail.html
+++ b/app/detail.html
@@ -187,33 +187,21 @@
 							<!-- sidebar-block -->
 							@@include('blocks/_sidebar-block.html',{
 								"sidebar-block__class":"detail__content-block",
-								"sidebar-block__img":"img/newsletter/bg.jpg",
-								"sidebar-block__alt":"img",
-								"sidebar-block__link":"#"
+								"sidebar-block__img":"img/information/05.jpg"
 							})
 							<!-- sidebar-block end -->
 
 							<!-- sidebar-new -->
 							@@include('blocks/_sidebar-new.html',{
 								"sidebar-new__class":"detail__content-new",
-								"sidebar-new__title":"Upsell products",
-								"sidebar-new__img-1":"img/cart/04.jpg",
-								"sidebar-new__alt-1":"img",
-								"sidebar-new__link-1":"#",
-								"sidebar-new__item-title-1":"Cuisinart DCC 3000 Coffee on Demand  12-C",
-								"sidebar-new__item-price-1":"$15.00"
+								"sidebar-new__title":"Upsell products"
 							})
 							<!-- sidebar-new end -->
 
 							<!-- sidebar-new -->
 							@@include('blocks/_sidebar-new.html',{
 								"sidebar-new__class":"detail__content-new",
-								"sidebar-new__title":"YOU MAY ALSO LIKE…",
-								"sidebar-new__img-1":"img/cart/04.jpg",
-								"sidebar-new__alt-1":"img",
-								"sidebar-new__link-1":"#",
-								"sidebar-new__item-title-1":"Cuisinart DCC 3000 Coffee on Demand  12-C",
-								"sidebar-new__item-price-1":"$15.00"
+								"sidebar-new__title":"YOU MAY ALSO LIKE…"
 							})
 							<!-- sidebar-new end -->
 
