--- a/app/index.html
+++ b/app/index.html
@@ -273,7 +273,7 @@
 				<!-- banner -->
 				<div class="information_01">
 					<div class="information_01__bg ibg">
-						<img src="img/information_01/01.jpg" alt="">
+						<img src="img/information/08.jpg" alt="">
 					</div>
 					<div class="information_01__content">
 						<div class="information_01__text">
