Add content for pages blog-col, blog-single

--- a/app/blocks/_footer.html
+++ b/app/blocks/_footer.html
@@ -11,7 +11,7 @@
 					</form>
 				</div>
 				<div class="newsletter__column">
-					<div class="newsletter__text">Just <span>59$</span>. If you like this theme</div>
+					<div class="newsletter__text">Just <span>59$</span>. If you like this coffee</div>
 					<a class="newsletter__btn btn" href="#">Buy it now</a>
 				</div>
 			</div>
