--- a/app/index.html
+++ b/app/index.html
@@ -306,7 +306,7 @@
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="blog-single.html">How To Make a Latte at Home Without an Espresso Machine <span>|  By KOMODOART</span></a>
+									<a class="news__item-title" href="blog-single.html">How To Make a Latte at Home Without an Espresso Machine<span>By KOMODOART</span></a>
 									<div class="news__item-text">We love our iced coffee in the summer, but fall and winter belong to the latte. We love to sit inside on a chilly day with a hot, frothy latte or cappuccino. But a latte shouldn’t just be a coffee shop treat.</div>
 									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
@@ -324,7 +324,7 @@
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="blog-single.html">How to Make Espresso <span>|  By KOMODOART</span></a>
+									<a class="news__item-title" href="blog-single.html">How to Make Espresso<span>By KOMODOART</span></a>
 									<div class="news__item-text">So you’ve decided that you’re ready to make espresso. A noble endeavor, surely, and one not to be undertaken lightly. Although espresso preparation has evolved almost constantly since the first espresso machine was patented over a century ago, there are a few pillars of the process that we should adhere to if you’re hoping to make consistently delicious coffee.</div>
 									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
@@ -342,7 +342,7 @@
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="blog-single.html">How to Choose a Coffee Maker <span>|  By KOMODOART</span></a>
+									<a class="news__item-title" href="blog-single.html">How to Choose a Coffee Maker<span>By KOMODOART</span></a>
 									<div class="news__item-text">Let me start off by saying that you most absolutely need a coffee maker. Starting your day with a bad-tasting cup of coffee is much worse than not drinking your morning coffee! So knowing what to buy and how is the first step to preparing a steaming cup at home.</div>
 									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
@@ -360,7 +360,7 @@
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="blog-single.html">How to pick between bean-to-cup, pod and espresso models <span>|  By KOMODOART</span></a>
+									<a class="news__item-title" href="blog-single.html">How to pick between bean-to-cup, pod and espresso models<span>By KOMODOART</span></a>
 									<div class="news__item-text">With the great British public drinking an impressive 95 million cups of coffee a day, it’s fair to say we’re a nation of coffee lovers. For those who shun the instant stuff, an at-home coffee machine may be worth the investment, as you can create barista-style coffees at the touch of a button.</div>
 									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
