--- a/app/detail.html
+++ b/app/detail.html
@@ -35,41 +35,47 @@
 									<div class="cart-detail__images">
 										<div class="cart-detail__slider">
 											<div class="cart-detail__slider-item">
-												<img class="cart-detail__img show" src="img/special-product/blue.png" color="blue" alt="">
+												<img class="cart-detail__img show" src="img/cart-detail/black.jpg" alt="">
 											</div>
 											<div class="cart-detail__slider-item">
-												<img class="cart-detail__img" src="img/special-product/red.png" color="red" alt="">
+												<img class="cart-detail__img" src="img/cart-detail/black-01.jpg" alt="">
 											</div>
 											<div class="cart-detail__slider-item">
-												<img class="cart-detail__img" src="img/special-product/brown.png" color="orange" alt="">
+												<img class="cart-detail__img" src="img/cart-detail/black-02.jpg" alt="">
 											</div>
 											<div class="cart-detail__slider-item">
-												<img class="cart-detail__img" src="img/special-product/dark.png" color="black" alt="">
+												<img class="cart-detail__img" src="img/cart-detail/black-03.jpg" alt="">
 											</div>
 											<div class="cart-detail__slider-item">
-												<img class="cart-detail__img" src="img/special-product/blue-darker.png" color="green" alt="">
+												<img class="cart-detail__img" src="img/cart-detail/black-04.jpg" alt="">
+											</div>
+											<div class="cart-detail__slider-item">
+												<img class="cart-detail__img" src="img/cart-detail/black-05.jpg" alt="">
 											</div>
 										</div>
 										<div class="cart-detail__box">
 											<div class="cart-detail__box-item">
-												<img src="img/special-product/red.png" alt="">
+												<img src="img/cart-detail/black.jpg" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/special-product/blue.png" alt="">
+												<img src="img/cart-detail/black-01.jpg" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/special-product/red.png" alt="">
+												<img src="img/cart-detail/black-02.jpg" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/special-product/blue.png" alt="">
+												<img src="img/cart-detail/black-03.jpg" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/special-product/blue.png" alt="">
+												<img src="img/cart-detail/black-04.jpg" alt="">
+											</div>
+											<div class="cart-detail__box-item">
+												<img src="img/cart-detail/black-05.jpg" alt="">
 											</div>
 										</div>
 									</div>
 									<div class="cart-detail__content">
-										<div class="cart-detail__title">Cuisinart DCC-3200P1 Perfectemp Coffee Maker</div>
+										<div class="cart-detail__title">BLACK+DECKER 12-Cup</div>
 										<div class="cart-detail__rating">
 											<div class="cart__rating" data-total-value="0">
 												<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
@@ -81,17 +87,14 @@
 											<a class="cart-detail__rating-reviews" href="#">288 Reviews</a>
 											<a class="cart-detail__rating-reviews" href="#">6 Questions Answered</a>
 										</div>
-										<div class="cart-detail__price">$79.96</div>
+										<div class="cart-detail__price">$33.27</div>
 										<div class="cart-detail__stock">AVAILABILITY: <span>IN STOCK</span></div>
-										<div class="cart-detail__descr">High Resolution: Yes, Widget Ready: Yes, Compatible Browsers: IE10, IE11, Firefox, Safari, Opera, Chrome, Compatible With: WPML, WooCommerce 2.5, Visual Composer 4.11.2.1, Software Version: WordPress 4.5.2, WordPress 4.5.1, WordPress 4.5, WordPrvess 4.4.2, WordPress 4.4.1, WordPress 4.4, Columns: 4+</div>
+										<div class="cart-detail__descr">Model Name - CM1160B-1, Material - Plastic, Capacity - 4.96 Ounces, Voltage - 120 Volts, Voice command	- Buttons, Model - CM1160B-1, Item Dimensions L x W x H - 8.25 x 12.25 x 11 inches</div>
 										<div class="cart-detail__colors">
 											<div class="cart-detail__colors-title">Color:</div>
 											<div class="cart-detail__colors-list">
-												<span class="cart-detail__colors-color active" primary="#2175f5" color="blue"></span>
-												<span class="cart-detail__colors-color" primary="#f84848" color="red"></span>
-												<span class="cart-detail__colors-color" primary="#29b864" color="green"></span>
-												<span class="cart-detail__colors-color" primary="#ff5521" color="orange"></span>
-												<span class="cart-detail__colors-color" primary="#444" color="black"></span>
+												<span class="cart-detail__colors-color black active"></span>
+												<span class="cart-detail__colors-color white"></span>
 											</div>
 										</div>
 										<div class="cart-detail__actions cart-detail__actions--1">
@@ -115,16 +118,14 @@
 											<div class="cart-detail__actions-categories">
 												<ul class="cart-detail__actions-list">
 													<li class="cart-detail__actions-item">Categories:</li>
-													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Accessories,</a></li>
-													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Headphones</a></li>
-												</ul>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Coffe Machine</a></li>												</ul>
 											</div>
 											<div class="cart-detail__actions-tags">
 												<ul class="cart-detail__actions-list">
 													<li class="cart-detail__actions-item">Tags:</li>
-													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Denon,</a></li>
-													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Music,</a></li>
-													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Over-Ear</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Coffee,</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Coffee Machine,</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">BLACK+DECKER</a></li>
 												</ul>
 											</div>
 										</div>
@@ -144,18 +145,20 @@
 									</ul>
 									<div class="tabs__area">
 										<div class="tabs__container">
-											<p><span>Why do we use it?</span>  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-											<p><span>Where does it come from?</span> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+											<div class="tabs__container-title">Model: CM1060B</div>
+											<p>Make your favorite coffee anytime with the BLACK+DECKER 12-Cup* Programmable Coffeemaker. QuickTouch™ Programming buttons make it easy to set the 24-hour auto brew feature and shave some time off of your morning routine. Other useful features include Sneak-A-Cup™ Technology, the 12-Cup* Duralife™ glass carafe, and a washable brew basket.</p>
 										</div>		
 										<div class="tabs__container">
 											<div class="tabs__container-title">About this item</div>
 											<div class="tabs__container-list">
 												<ul>
-													<li>State-of-the-art technology to ensure hotter coffee without sacrificing flavor or quality</li>
-													<li>Brew strength control allows you to select regular or bold coffee flavor</li>
-													<li>Fully automatic with 24-hour programmability, self-clean, 1-4 cup setting and auto shutoff (0-4 hours)</li>
-													<li>Adjustable keep warm temperature control</li>
-													<li>Gold tone, commercial style permanent filter.MC Cubic Feet: 2.32</li>
+													<li>QuickTouch Programming - Easily program the 24-hour auto brew feature so you can wake up to a fresh pot of coffee.</li>
+													<li>Digital Controls with Rubberized Feel - Large, rubberized buttons give you full control of the coffeemaker, and the easy-read screen displays the clock, brew time, and programming options.</li>
+													<li>Sneak-a-Cup - This feature temporarily stops the flow of coffee so you can pour your first cup before brewing ends without making a mess.</li>
+													<li>2-Hour Auto Shutoff - For added safety and peace of mind with every use. Volts : 120V/60Hz</li>
+													<li>Easy-View Water Window - The front-facing window shows you the exact amount of water that will turn into coffee.</li>
+													<li>Keep Hot Carafe Plate - The nonstick carafe plate keeps coffee warm for an hour after brewing is complete.</li>
+													<li>Note: Cup equals approximately 5 oz. (varies by brewing technique)</li>
 												</ul>
 											</div>
 										</div>
