Fix menu for mobile

--- a/app/blocks/_header.html
+++ b/app/blocks/_header.html
@@ -54,13 +54,13 @@
 									</div> -->
 									<div class="menu__submenu-column">
 										<a href="#">
-											<img class="menu__submenu-img" src="img/information_01/01.jpg" alt="">
+											<img class="menu__submenu-img" src="img/information/08.jpg" alt="">
 										</a>
 									</div>
 								</div>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="#">Shop</a>
+						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Shop</a>
 							<ul class="menu__dropdown">
 								<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
@@ -68,13 +68,13 @@
 							</ul>
 						</li>
 						<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
-						<li class="menu__item"><a class="menu__link" href="#">Blog</a>
+						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Blog</a>
 							<ul class="menu__dropdown">
 								<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="#">Contact us</a>
+						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Contact us</a>
 							<ul class="menu__dropdown">
 								<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact us</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="contact.html" class="menu__link menu__dropdown-link">Contact</a></li>
