--- a/app/blog-col.html
+++ b/app/blog-col.html
@@ -71,7 +71,7 @@
 									<div class="blog-list__item">
 										<div class="blog-list__item-img">
 											<a href="blog-single.html">
-												<img src="img/news/05.jpg" alt="">
+												<img src="img/blog/05.jpg" alt="">
 											</a>
 										</div>
 										<div class="blog-list__item-body">
