--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -792,7 +792,7 @@
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/01.jpg" alt="">
 											</div>
 											<div class="popular-product__categories-title">Coffee Machines</div>
 										</div>
@@ -800,73 +800,65 @@
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/02.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Single-Serve Brewers</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/03.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Espresso Machine</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/04.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Coffee Makers</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/05.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Accessories</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/06.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Coffee Pod Holders</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/07.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Hamilton</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/08.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Gloridea</div>
 										</div>
 									</div>
 									<div class="popular-product__slider-item">
 										<div class="popular-product__categories">
 											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
+												<img src="img/popular-product/09.jpg" alt="">
 											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
-										</div>
-									</div>
-									<div class="popular-product__slider-item">
-										<div class="popular-product__categories">
-											<div class="popular-product__categories-img">
-												<img src="img/cart/08.jpg" alt="">
-											</div>
-											<div class="popular-product__categories-title">Coffee Machines</div>
+											<div class="popular-product__categories-title">Takeya</div>
 										</div>
 									</div>
 								</div>
