--- a/app/blocks/_footer.html
+++ b/app/blocks/_footer.html
@@ -41,7 +41,7 @@
 					<!-- accordion -->
 					<div class="accordion">
 						<!-- accordion__item -->
-						<section class="accordion__item">
+						<div class="accordion__item">
 							<div class="accordion__item-title">MORE INFO</div>
 							<div class="accordion__item-info">
 								<ul  class="footer__nav">
@@ -52,10 +52,10 @@
 									<li><a href="#">Wholesale</a></li>
 								</ul>
 							</div>
-						</section>
+						</div>
 						<!-- accordion__item end -->
 						<!-- accordion__item -->
-						<section class="accordion__item">
+						<div class="accordion__item">
 							<div class="accordion__item-title">Company</div>
 							<div class="accordion__item-info">
 								<ul  class="footer__nav">
@@ -66,10 +66,10 @@
 									<li><a href="#">Secure Shopping</a></li>
 								</ul>
 							</div>
-						</section>
+						</div>
 						<!-- accordion__item end -->
 						<!-- accordion__item -->
-						<section class="accordion__item">
+						<div class="accordion__item">
 							<div class="accordion__item-title">About Us</div>
 							<div class="accordion__item-info">
 								<ul  class="footer__nav">
@@ -80,10 +80,10 @@
 									<li><a href="#">Careers</a></li>
 								</ul>
 							</div>
-						</section>
+						</div>
 						<!-- accordion__item end -->
 						<!-- accordion__item -->
-						<section class="accordion__item">
+						<div class="accordion__item">
 							<div class="accordion__item-title">HELP</div>
 							<div class="accordion__item-info">
 								<ul  class="footer__nav">
@@ -94,7 +94,7 @@
 									<li><a href="#">Fabric Guide</a></li>
 								</ul>
 							</div>
-						</section>
+						</div>
 						<!-- accordion__item end -->
 					</div>
 					<!-- accordion end -->
