--- a/app/about.html
+++ b/app/about.html
@@ -10,14 +10,18 @@
 		<main class="page">
 			@@include('blocks/_page-policy.html')
 			<!-- breadcrumbs -->
-			<div class="breadcrumbs">
+			<nav class="breadcrumbs">
 				<div class="container">
 					<ul class="breadcrumbs__list">
-						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Home</a></li>
-						<li class="breadcrumbs__item">About</li>
+						<li>
+							<a class="breadcrumbs__link" href="index.html">Home</a>
+						</li>
+						<li>
+							<span class="breadcrumbs__item">About</span>
+						</li>
 					</ul>
 				</div>
-			</div>
+			</nav>
 			<!-- breadcrumbs end -->
 
 			<!-- about -->
