--- a/app/blocks/_breadcrumbs.html
+++ b/app/blocks/_breadcrumbs.html
@@ -1,10 +1,14 @@
 <!-- breadcrumbs -->
-			<div class="breadcrumbs">
+			<nav class="breadcrumbs">
 				<div class="container">
 					<ul class="breadcrumbs__list">
-						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Home</a></li>
-						<li class="breadcrumbs__item">@@breadcrumbs-name</li>
+						<li>
+							<a class="breadcrumbs__link" href="index.html">Home</a>
+						</li>
+						<li >
+							<span class="breadcrumbs__item">@@breadcrumbs-name</span>
+						</li>
 					</ul>
 				</div>
-			</div>
+			</nav>
 			<!-- breadcrumbs end -->
