--- a/app/detail.html
+++ b/app/detail.html
@@ -10,16 +10,24 @@
 		<main class="page">
 			@@include('blocks/_page-policy.html')
 			<!-- breadcrumbs -->
-			<div class="breadcrumbs">
+			<nav class="breadcrumbs">
 				<div class="container">
 					<ul class="breadcrumbs__list">
-						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Home</a></li>
-						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Kitcheng electricals</a></li>
-						<li class="breadcrumbs__item"><a class="breadcrumbs__link" href="index.html">Coffee machines</a></li>
-						<li class="breadcrumbs__item">Cuisinart DCC-3200P1 Perfectemp Coffee Maker</li>
+						<li>
+							<a class="breadcrumbs__link" href="index.html">Home</a>
+						</li>
+						<li>
+							<a class="breadcrumbs__link" href="index.html">Kitcheng electricals</a>
+						</li>
+						<li>
+							<a class="breadcrumbs__link" href="index.html">Coffee machines</a>
+						</li>
+						<li>
+							<span class="breadcrumbs__item">Cuisinart DCC-3200P1 Perfectemp Coffee Maker</span>
+						</li>
 					</ul>
 				</div>
-			</div>
+			</nav>
 			<!-- breadcrumbs end -->
 			<!-- detail-list -->
 			<div class="detail">
